--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     :root {
       --bg: #eff6ff;
-      --panel: #ffffff;
+      --panel: #FCF5EB;
       --soft: #e0f2fe;
       --primary: #2563eb;
       --secondary: #38bdf8;
@@ -19,7 +19,7 @@
     * { box-sizing: border-box; margin: 0; padding: 0; }
 
     body {
-      background: linear-gradient(180deg, #fff5f5, #ffffff);
+      background: linear-gradient(180deg, #E6FFDA, #FCF5EB);
       color: var(--text);
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
       line-height: 1.7;
@@ -191,7 +191,7 @@
     .skill {
       padding: 0.45rem 0.9rem;
       border-radius: 999px;
-      background: #ffffff;
+      background: #FCF5EB;
       border: 1px solid var(--border);
       font-size: 0.85rem;
     }
@@ -231,7 +231,7 @@
       padding: 2.5rem 1.5rem;
       text-align: center;
       color: var(--muted);
-      background: #fffafa;
+      background: #FCF5EB;
     }
 
     /* ---------- ANIMATIONS ---------- */
